--- a/notebooks/Pathways without mappings.ipynb
+++ b/notebooks/Pathways without mappings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pathways without any mappings\n",
+    "# Analysis of unique pathways in each database\n",
     "\n",
     "This notebook shows explores the pathways without any type of mapping with other database (KEGG, Reactome, or WikiPathways). Summary can be found at the bottom of the notebook."
    ]
@@ -198,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kegg_wikipathways, wikipathways_kegg, keggs = get_mapped_pathways(kegg_wikipathways_df)\n",
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -237,8 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kegg_without_mappings = kegg_names.difference(kegg_reactome.union(kegg_wikipathways))\n",
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,14 +277,16 @@
    "source": [
     "__Findings and Summary__:\n",
     "\n",
-    "- __There are no metabolic pathways without mappings__. This is likely due to:\n",
-    "    1. Metabolic knowledge is well covered in all databases\n",
-    "    2. Reactome and KEGG both contain a big \"metabolism pathway\". Therefore, even there always exist a mapping.\n",
-    "- Most of the KEGG pathways without mappings correspond to disease pathways\n",
-    "- __A big majority (~75%) of the Reactome do not contain any mapping__. This is likely due to:\n",
-    "    1. Reactome granularity. The majority of Reactome pathways are specific ([see linked notebook](https://github.com/ComPath/curation/blob/master/notebooks/Similarity%20analysis%20in%20mapped%20pathways.ipynb)). Therefore, it is hard to map with KEGG and WikiPathways pathways.\n",
-    "    2. The way in which the curation protocol was conducted ([see README file](https://github.com/ComPath/curation/blob/master/README.rst)) makes more difficult to identify mappings in Reactome since it was not used as reference database but as a comparison. In other words, we curated for each KEGG pathway the possible Reactome mapping, not the other around (due to the size of Reactome) and therefore, it is possible that some mappings might not have been identified.\n",
-    "- __Most of the WikiPathways pathways without mappings are disease-related pathways__ (e.g., 'Wnt Signaling in Kidney Disease', 'Tumor suppressor activity of SMARCB1', and 'The human immune response to tuberculosis'). In contrast to KEGG, they are not disease pathways but a variant of the pathway given a disease context.   \n",
+    "1. __There are no metabolic pathways without mappings__. This is likely due to:\n",
+    "    - Metabolic knowledge is well covered in all databases\n",
+    "    - Reactome and KEGG both contain a big \"metabolism pathway\". Therefore, even there always exist a mapping.\n",
+    "2. __Most of the KEGG pathways without mappings correspond to disease pathways__. For example: Acute myeloid leukemia - Homo sapiens (human), Asthma - Homo sapiens (human) or Chagas disease (American trypanosomiasis) - Homo sapiens (human).\n",
+    "\n",
+    "3. __A big majority (~75%) of the Reactome do not contain any mapping__. This is likely due to:\n",
+    "    - Reactome granularity. The majority of Reactome pathways are specific ([see linked notebook](https://github.com/ComPath/curation/blob/master/notebooks/Similarity%20analysis%20in%20mapped%20pathways.ipynb)). Therefore, it is hard to map with KEGG and WikiPathways pathways.\n",
+    "    - The way in which the curation protocol was conducted ([see README file](https://github.com/ComPath/curation/blob/master/README.rst)) makes more difficult to identify mappings in Reactome since it was not used as reference database but as a comparison. In other words, we curated for each KEGG pathway the possible Reactome mapping, not the other around (due to the size of Reactome) and therefore, it is possible that some mappings might not have been identified.\n",
+    "    \n",
+    "4. __Most of the WikiPathways pathways without mappings are disease-related pathways__ (e.g., 'Wnt Signaling in Kidney Disease', 'Tumor suppressor activity of SMARCB1', and 'The human immune response to tuberculosis'). In contrast to KEGG, they are not disease pathways but a variant of the pathway given a disease context.   \n",
     "\n",
     "_If you want to see the list of pathways without mappings for each database, type in the following cell any of the three following words (depending on the database) and run the cell:_\n",
     "\n",
@@ -290,9 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
