Remove unused imports in notebooks

--- a/notebooks/Pathways without mappings.ipynb
+++ b/notebooks/Pathways without mappings.ipynb
@@ -17,18 +17,8 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "from bio2bel_kegg.manager import Manager as KeggManager\n",
-    "from bio2bel_wikipathways.manager import Manager as WikiPathwaysManager\n",
-    "from bio2bel_reactome.manager import Manager as ReactomeManager\n",
-    "\n",
-    "from collections import Counter\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from matplotlib_venn import venn3"
+    "from bio2bel_reactome.manager import Manager as ReactomeManager"
    ]
   },
   {
@@ -75,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Call the Database Managers to query gene sets"
+    "Call the Database Managers to list of reactome pathways"
    ]
   },
   {
@@ -86,8 +76,6 @@
    },
    "outputs": [],
    "source": [
-    "kegg_manager = KeggManager()\n",
-    "wikipathways_manager = WikiPathwaysManager()\n",
     "reactome_manager = ReactomeManager()"
    ]
   },
@@ -296,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
