Add new notebook

--- a/notebooks/Pathways without mappings.ipynb
+++ b/notebooks/Pathways without mappings.ipynb
@@ -18,18 +18,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "from bio2bel_reactome.manager import Manager as ReactomeManager"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
    ]
   },
   {
@@ -41,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -88,13 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    " def get_pathways_from_statement(mapping_statement, mapping_type):\n",
+    " def get_pathways_without_mappings(all_pathways_ids, mappings_1, mappings_2):\n",
+    "    \"\"\"Return pathways without mappings.\"\"\"\n",
+    "    return {\n",
+    "        pathway_id\n",
+    "        for pathway_id in all_pathways_ids\n",
+    "        if pathway_id not in mappings_1 and pathway_id not in mappings_2\n",
+    "    }\n",
+    "\n",
+    "def get_pathways_from_statement(mapping_statement, mapping_type):\n",
     "    \"\"\"Return the subject, object of the mapping.\n",
     "    \n",
     "    :param str mapping_statement: statement\n",
@@ -185,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -207,10 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "kegg_names = keggs # rows of the excel\n",
@@ -228,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "kegg_without_mappings = kegg_names.difference(kegg_reactome.union(kegg_wikipathways))\n",
@@ -284,9 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
