--- a/notebooks/Common pathways across databases.ipynb
+++ b/notebooks/Common pathways across databases.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Common pathways across databases\n",
     "\n",
-    "This notebook elucidates the shared pathways (equivalent) between KEGG, Reactome, and WikiPathways."
+    "This notebook elucidates the shared pathways (equivalent) between KEGG, Reactome, and WikiPathways.\n",
+    "\n",
+    "Author: [Daniel Domingo-Fernández](https://github.com/ddomingof)"
    ]
   },
   {
