--- a/notebooks/Similarity analysis in mapped pathways.ipynb
+++ b/notebooks/Similarity analysis in mapped pathways.ipynb
@@ -6,13 +6,17 @@
    "source": [
     "# Similarity analysis in mapped pathways\n",
     "\n",
-    "This notebook shows explores the similarity between the mappings across KEGG, Reactome, and WikiPathways."
+    "This notebook shows explores the similarity between the mappings across KEGG, Reactome, and WikiPathways.\n",
+    "\n",
+    "Author: [Daniel Domingo-Fernández](https://github.com/ddomingof)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -29,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -45,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kegg_wikipathways_df = pd.read_excel(\n",
@@ -72,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kegg_manager = KeggManager()\n",
@@ -90,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calculate_szymkiewicz_simpson_coefficient(set_1, set_2):\n",
@@ -518,7 +530,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kegg_distribution = kegg_manager.get_pathway_size_distribution()\n",
@@ -590,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
