Update notebook descriptions

--- a/notebooks/Mappings Similarity Analysis.ipynb
+++ b/notebooks/Mappings Similarity Analysis.ipynb
@@ -378,7 +378,7 @@
     "The distributions present us with interesting results:\n",
     "\n",
     "- The number of equivalent pathways between the three is fairly consistent (56, 58, and 64 shared pathtways).\n",
-    "- KEGG and WikiPathways share the highest similarity within this shared pathways (distribution is right skewed and avg equals 0.787 similarity). The reason for this might be related to the fact that Reactome granularity (smaller pathways in general, see plots at the bottom of the notebook) is different to KEGG and WikiPathways which contain mostly medium-sized pathways (~100 genes).\n",
+    "- KEGG and WikiPathways share the highest similarity within the shared pathways (distribution is right skewed and avg equals 0.787 similarity). The reason for this might be related to the fact that Reactome granularity (smaller pathways in general, see plots at the bottom of the notebook) is different to KEGG and WikiPathways which contain mostly medium-sized pathways (~100 genes).\n",
     "- Few pathways share a similarity lower than 0.4 (40% overlap).\n",
     "\n",
     "_Note that there is one outlier in the left side of each histogram (equivalent pathways with less than 0.2 overlap)._\n",
@@ -506,7 +506,7 @@
     "collapsed": true
    },
    "source": [
-    "The plots reveal a similar trend for the hierarchical mappings in the pairwise database mappings. As expected, hierarchical mappings shared a high similarity (peak of the distribution is located around 1.0). \n",
+    "The distributions of hierarchical mappings are consistent across all inter-database mappings. As expected, hierarchical mappings share high similarity (peak of the distribution is located around 1.0). \n",
     "\n",
     "_It is important to mention that even more mappings are stored in the database thanks to the ComPath inference system. For example, when a KEGG/WikiPathways pathway is assigned as equivalent to a Reactome pathway, ComPath uses the Reactome hierarchy to infer new hierarchical mappings and map the super/sub pathways of the Reactome pathway to its corresponding KEGG/WikiPathways pathway. This plot is only for illustration purposes, because infered mappings were not included here. However, those mappings will no change the overall picture because they will share high similarity with the other pathway (since they are completely embedded in the other pathways)._"
    ]
