Update notebook descriptions

--- a/notebooks/Mappings Similarity Analysis.ipynb
+++ b/notebooks/Mappings Similarity Analysis.ipynb
@@ -515,6 +515,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Mapping Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- | KEGG | Reactome | WikiPathways\n",
+    "---- |---- |----------|-------------\n",
+    "KEGG | - | 59 equivalentTo mappings / 597 isPartOf mappings | 56 equivalentTo mappings / 247 isPartOf mappings\n",
+    "Reactome | - | - | 64 equivalentTo mappings / 564 isPartOf mappings\n",
+    "WikiPathways | - | - | -\n",
+    "\n",
+    "Table Summarizing the Mappings between Databases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Extra: Distribution of pathway size for each database"
    ]
   },
